--- a/themusescircle/dev/themes/musescircle/assets/scss/_footer.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_footer.scss
@@ -9,10 +9,11 @@
 		h4 {
 			margin: 0 0 10px 0;
 		}
-		.widget_nav_menu > div {
+		.widget_nav_menu > div:not(.menu-social-container) {
 			@include font-size(16px);
 			.menu {
 				@include flex(row wrap);
+				margin: 0 0 15px 0;
 				& > li {
 					flex: 1 1 50%;
 					& > a {
@@ -31,23 +32,23 @@
 		}
 		.search-form {
 			position: relative;
+			margin: 0 0 20px 0;
 			input[type='text'] {
 				width: 100%;
 				padding: 0 40px 0 10px;
-				&:focus ~ button svg {
-					fill: $color-01;				
+				&:focus ~ button .icon {
+					color: $color-01;				
 				}
 			}
 			button {
 				position: absolute;
 				right: 10px;
-				top: 8px;
-				svg {
-					@include sizing(auto, 18px);
-					fill: $color-13;
-					@include transition(fill 0.3s ease-in-out);
+				top: 6px;
+				.icon {
+					color: $color-13;
+					@include transition(color 0.3s ease-in-out);
 					&:hover {
-						fill: $color-01;
+						color: $color-01;
 					}
 				}
 			}			
