--- a/themusescircle/dev/themes/musescircle/assets/scss/_front-page.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_front-page.scss
@@ -37,19 +37,24 @@
 			padding: 10px;
 			text-align: center;
 			.icon {
-				@include sizing(auto, 100%);
-				fill: $color-01;
-				@include transition(fill 0.3s ease-in-out);				
+				@include font-size(18px);
+				@include transition(color 0.3s ease-in-out);			
 			}
 			&:hover .icon {
-				fill: $color-05;
+				color: $color-05;
 			}			
 		}
 		.owl-prev {
 			left: 0;
+			.icon {
+				margin: 0 0 0 -2px;
+			}
 		}
 		.owl-next {
 			right: 0;
+			.icon {
+				margin: 0 -2px 0 0;
+			}
 		}
 	}
 }
@@ -77,21 +82,17 @@
 		@include font-size(14px);
 		text-transform: uppercase;
 		color: $color-01;
-		.icon, .button-text {
+		.button-text {
 			@include inline-block(middle);
 		}
 		.icon {
-			height: 20px;
-			margin: -2px 10px 0 0;
-			fill: currentColor;
+			@include font-size(18px);
+			margin: -4px 10px 0 0;
 		}
 		&:hover {
 			@include transition(all 0.3s ease-in-out);
 			border: 1px solid $color-07;
 			color: $color-07;
-			.icon {
-				fill: currentColor;
-			}
 		}
 	}
 }
