--- a/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
@@ -14,43 +14,6 @@
 	}	
 }
 
-/* Top bar - Social media
-========================================================================== */
-
-#top-bar .menu-social-container ul {
-	margin: 0 -3px;
-	li {
-		@include inline-block(middle);
-		padding: 0 3px;
-		a { 	
-			color: $color-01;
-			&:hover {
-				color: $color-07;
-			}
-			&, .social-icon, .social-text {
-				display: block;
-			}
-			.social-icon {
-				@include sizing(auto, 20px);
-				min-width: 22px;
-				text-align: center;
-				.icon {
-					fill: $color-13;
-					height: 100%;
-					@include transition(fill 0.3s ease-in-out);
-				}
-				&:hover .icon {
-					fill: $color-01;
-				}
-			}
-			.social-text {
-				text-indent: -9999px;
-				@include sizing(0,0);
-			}														
-		}		
-	}
-}
-
 /* Top bar - Search bar
 ========================================================================== */
 
@@ -63,20 +26,20 @@
 			line-height: 30px;
 			@include font-size(14px);
 			padding: 0 35px 0 10px;
-			&:focus ~ button svg {
-				fill: $color-01;				
+			&:focus ~ button .icon {
+				color: $color-01;				
 			}
 		}
 		button {
 			position: absolute;
 			right: 10px;
 			top: 6px;
-			svg {
-				@include sizing(auto, 16px);
-				fill: $color-13;
-				@include transition(fill 0.3s ease-in-out);
+			.icon {
+				@include font-size(14px);
+				color: $color-13;
+				@include transition(color 0.3s ease-in-out);
 				&:hover {
-					fill: $color-01;
+					color: $color-01;
 				}
 			}
 		}
@@ -90,12 +53,12 @@
 	@include sizing(auto, 20px);
 	min-width: 22px;
 	margin: 0 0 0 10px;
-	svg {
-		@include sizing(auto, 100%);
-		fill: $color-13;
-		@include transition(fill 0.3s ease-in-out);
+	.icon {
+		@include font-size(18px);
+		color: $color-13;
+		@include transition(color 0.3s ease-in-out);
 		&:hover {
-			fill: $color-01;
+			color: $color-01;
 		}
 	}	
 }
@@ -156,11 +119,8 @@
 					right: 20px;
 					top: 20px;
 					z-index: 10;
-					@include sizing(18px, auto);
-					fill: currentColor;
 					cursor: pointer;
-					@include transition(color 0.3s ease-in-out);
-					@include transition(transform 0.8s ease-in-out);
+					@include transition(all 0.8s ease-in-out);
 				  	transform: rotate(0deg);							
 					&.show {
 						transform: rotate(180deg);
