--- a/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
@@ -29,3 +29,54 @@ $serif-fb: garamond, times new roman, serif;
 $sans-serif-fb: arial, sans-serif;
 $font-01: 'Source Sans Pro', $sans-serif-fb;
 $font-02: 'Qwigley', $serif-fb;
+
+/* Icons
+========================================================================== */
+
+$icon-library-thing: '\e900';
+$icon-goodreads: '\e901';
+$icon-search: '\f002';
+$icon-heart: '\f004';
+$icon-star: '\f005';
+$icon-film: '\f008';
+$icon-check: '\f00c';
+$icon-times: '\f00d';
+$icon-home: '\f015';
+$icon-tag: '\f02b';
+$icon-book: '\f02d';
+$icon-pencil: '\f040';
+$icon-asterisk: '\f069';
+$icon-calendar: '\f073';
+$icon-comment: '\f075';
+$icon-folder-open: '\f07c';
+$icon-comments: '\f086';
+$icon-twitter: '\f099';
+$icon-facebook: '\f09a';
+$icon-google-plus: '\f0d5';
+$icon-envelope: '\f0e0';
+$icon-linkedin: '\f0e1';
+$icon-chevron-left: '\f053';
+$icon-chevron-right: '\f054';
+$icon-chevron-up: '\f077';
+$icon-chevron-down: '\f078';
+$icon-angle-double-left: '\f100';
+$icon-angle-double-right: '\f101';
+$icon-angle-double-up: '\f102';
+$icon-angle-double-down: '\f103';
+$icon-angle-left: '\f104';
+$icon-angle-right: '\f105';
+$icon-angle-up: '\f106';
+$icon-angle-down: '\f107';
+$icon-youtube: '\f167';
+$icon-youtube-play: '\f16a';
+$icon-instagram: '\f16d';
+$icon-tumblr: '\f173';
+$icon-paper-plane: '\f1d8';
+$icon-pinterest: '\f231';
+$icon-tv: '\f26c';
+$icon-quill: '\e907';
+$icon-pen: '\e908';
+$icon-film2: '\e913';
+$icon-video-camera: '\e914';
+$icon-book2: '\e920';
+$icon-tv2: '\e95b';
