--- a/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
@@ -91,21 +91,20 @@
 		}
 	}
 	.entry-meta .rating {		
-		margin: 0 0 2px 0;
-		&, strong, .rating-out-of, .rating-value {
+		margin: 0 0 2px 0;  
+		strong, .rating-wrapper, .rating-out-of, .rating-value {
 			@include inline-block(middle);
+		}
+		.rating-text {
+			@include font-size(0px);
+			text-index: -9999;
 		}
 		.rating-out-of {
 			position: relative;
-			line-height: 0;
-			margin: 0 0 0 2px;
 			background: $color-04;
 			.icon-star {
-				@include sizing(15px, auto);
 				margin: 0 1px;
-			}
-			& > .icon-star {
-				fill: $color-01;				
+				@include font-size(16px);
 			}
 			.rating-value {
 				overflow: hidden;
@@ -116,11 +115,9 @@
 				overflow: hidden;
 				background: inherit;							
 				.icon-star {
-					fill: $color-07;
-					stroke: $color-06;
-					stroke-width: 2;
+					color: $color-07;
 				}				
-			}			
+			}
 		}
 	}
 }
