--- a/themusescircle/dev/themes/musescircle/assets/scss/_typography.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_typography.scss
@@ -136,6 +136,9 @@
 .icon-comment:before {
     content: $icon-comment;
 }
+.icon-inbox:before {
+    content: $icon-inbox;
+}
 .icon-folder-open:before {
     content: $icon-folder-open;
 }
