--- a/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
@@ -48,6 +48,7 @@ $icon-pencil: '\f040';
 $icon-asterisk: '\f069';
 $icon-calendar: '\f073';
 $icon-comment: '\f075';
+$icon-inbox: '\f01c';
 $icon-folder-open: '\f07c';
 $icon-comments: '\f086';
 $icon-twitter: '\f099';
