--- a/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
@@ -3,7 +3,7 @@
 
 .entry-multiple {
 	@include flex(row wrap);
-	margin: 0 -10px;
+	margin: 0 -10px 30px -10px;
 	&, .entry {
 		@include flex(row wrap);
 	}
