--- a/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
@@ -38,6 +38,9 @@
 			&[href*='pinterest']:before {
 				content: $icon-pinterest;
 			}
+			&[href*='tumblr']:before {
+				content: $icon-tumblr;
+			}			
 			&[href*='goodreads']:before {
 				content: $icon-goodreads;
 			}
@@ -73,7 +76,7 @@
 	}
 }
 
-.menu {
+.menu, .pagination > .page-numbers {
 	&, li, ul {
 		list-style: none;
 		margin: 0;
@@ -97,6 +100,85 @@
 		margin: 0 0 0 30px;
 		padding: 0 0 0 30px;
 		border-left: 1px dashed $color-06;
+	}
+}
+
+/* Layout - Content - Two columns - Article
+========================================================================== */
+
+.content article {
+	.category-description {
+		margin: 0 0 50px 0;
+	}
+	.entry-author {
+		@include flex(row wrap);
+		align-items: flex-start;
+		margin: 0 0 20px 0;
+		.entry-author-thumbnail {
+			max-width: 160px;
+			margin: 0 20px 0 0;
+			overflow: hidden;
+			border: 5px solid $color-06;
+			.image-wrap {
+			    width: 100%;
+			    height: 0;
+			    padding: 0 0 100% 0;
+			}
+		}
+		.entry-author-details {
+			flex: 1;
+			.entry-author-social {
+				strong, .menu {
+					@include inline-block(middle);
+				}
+				strong {
+					padding: 0 10px 0 0;
+				}
+			}
+		}
+	}
+	.entry-single .entry-author {
+		h3 {
+			flex: 100%;
+			margin: 0 0 10px 0;
+		}
+		.entry-author-thumbnail {
+			max-width: 125px;
+		}
+	}
+	.pagination {
+		text-align: center;
+		& > .page-numbers {
+			margin: 0 -4px;
+			li {
+				@include inline-block(middle);
+				margin: 0 4px;
+				line-height: 32px;
+				min-width: 32px;
+				.page-numbers {
+					display: block;
+					padding: 0 5px;
+					@include sizing(100%, 100%);	
+					border-radius: 4px;					
+				}		
+				a.page-numbers {
+					color: $color-01;
+					background: $color-06;
+					@include transition(background 0.3s ease-in-out);
+					&:hover {
+						background: $color-05;
+					}					
+				}
+				span.page-numbers.current {
+					background: $color-01;
+					color: $color-07;
+					font-weight: bold;
+				}
+				.icon {
+					@include font-size(12px);
+				}
+			}
+		}
 	}
 }
 
