--- a/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
@@ -241,6 +241,7 @@
 	}
 	&.widget_pages ul li:before, &.widget_recent_entries ul li:before {
 		content: $icon-quill;
+		top: 4px;
 	}
 	&.widget_tag_cloud .tagcloud {
 		margin: 0 -2.5px 15px -2.5px;
@@ -303,7 +304,7 @@
 			background: $color-06;
 		}
 		thead, tbody td a {
-			background: $color-07;
+			background: $color-05;
 		}
 		caption, td {
 			padding: 2px;
@@ -311,7 +312,7 @@
 		tbody td a, tfoot td a {
 			color: $color-01;
 			&:hover {
-				color: $color-02;
+				color: $color-13;
 			}			
 		}
 		caption {
@@ -323,13 +324,13 @@
 		}		
 		thead th {
 			font-weight: bold;
-			border: 1px solid $color-07;
+			border: 1px solid $color-05;
 		}
 		tbody {
 			td a {
 				display: block;
 				@include sizing(100%, 100%);
-				box-shadow: 0 0 0 2px $color-07;
+				box-shadow: 0 0 0 2px $color-05;
 			}
 			tr:first-child td {
 				border-top: 1px solid $color-07;
