Add some default styles

--- a/themusescircle/dev/themes/musescircle/assets/scss/style.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/style.scss
@@ -22,6 +22,7 @@
 @import 'base';
 @import 'typography';
 @import 'form-fields';
+@import 'wordpress';
 @import 'header';
 @import 'layout';
 @import 'entry';
