--- a/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
@@ -122,8 +122,6 @@
 	}
 }
 
-
-
 /* Entry - Rating
 ========================================================================== */
 
@@ -213,92 +211,92 @@
 /* Entry - WordPress
 ========================================================================== */
 
-.entry {
-	.sticky {}
-	.bypostauthor {}
-	.gallery {
-		@include flex(row wrap);
-		margin: 0 -1%;
-		figure {		
-			text-align: center;
-			margin: 0 1% 2% 1%;
-			padding: 20px;
-			background: $color-03;
-			.gallery-icon {
-				line-height: 0;
-				margin: 0 0 10px 0;
-			}
-			.wp-caption-text {
-				font-style: italic;
-			}
-		}
-		&.gallery-columns-1 figure {
-			flex: 1 1 100%;
-		}
-		&.gallery-columns-2 figure {
-			flex: 1 1 48%;
-			max-width: 48%;
-		}
-		&.gallery-columns-3 figure {
-			flex: 1 1 31.33%;
-			max-width: 31.33%;
-		}
-		&.gallery-columns-4 figure {
-			flex: 1 1 23%;
-			max-width: 23%;		
-		}
-		&.gallery-columns-5 figure {
-			flex: 1 1 18%;
-			max-width: 18%;			
-		}
-		&.gallery-columns-6 figure {
-			flex: 1 1 14.66%;
-			max-width: 14.66%;		
-		}
-		&.gallery-columns-7 figure {
-			flex: 1 1 12.285%;
-			max-width: 12.285%;				
-		}
-		&.gallery-columns-8 figure {
-			flex: 1 1 10.05%;
-			max-width: 10.05%;			
-		}
-		&.gallery-columns-9 figure {
-			flex: 1 1 9.11%;
-			max-width: 9.11%;				
-		}											
-	}
-	.wp-caption {
-		margin: 0;
-		max-width: 500px;
-		background: $color-03;
-		border: 5px solid $color-03;
-		img {
-			max-width: 100% !important;
-		}
-		.wp-caption-text {
-			padding: 10px;
-			font-style: italic;
-		}
-	}
-	.alignright {
-		float: right;
-		clear: right;
-		margin: 0 0 20px 20px;
-	}
-	.alignleft {
-		float: left;
-		clear: left;
-		margin: 0 20px 20px 0;
-	}
-	.aligncenter {
-		margin: 0 auto;
-		display: block;
-	}
-	.screen-reader-text {
-		clip: rect(1px, 1px, 1px, 1px);
-		position :absolute !important;
-	}
+.entry .entry-content {
+	// .sticky {}
+	// .bypostauthor {}
+	// .gallery {
+	// 	@include flex(row wrap);
+	// 	margin: 0 -1%;
+	// 	figure {		
+	// 		text-align: center;
+	// 		margin: 0 1% 2% 1%;
+	// 		padding: 20px;
+	// 		background: $color-03;
+	// 		.gallery-icon {
+	// 			line-height: 0;
+	// 			margin: 0 0 10px 0;
+	// 		}
+	// 		.wp-caption-text {
+	// 			font-style: italic;
+	// 		}
+	// 	}
+	// 	&.gallery-columns-1 figure {
+	// 		flex: 1 1 100%;
+	// 	}
+	// 	&.gallery-columns-2 figure {
+	// 		flex: 1 1 48%;
+	// 		max-width: 48%;
+	// 	}
+	// 	&.gallery-columns-3 figure {
+	// 		flex: 1 1 31.33%;
+	// 		max-width: 31.33%;
+	// 	}
+	// 	&.gallery-columns-4 figure {
+	// 		flex: 1 1 23%;
+	// 		max-width: 23%;		
+	// 	}
+	// 	&.gallery-columns-5 figure {
+	// 		flex: 1 1 18%;
+	// 		max-width: 18%;			
+	// 	}
+	// 	&.gallery-columns-6 figure {
+	// 		flex: 1 1 14.66%;
+	// 		max-width: 14.66%;		
+	// 	}
+	// 	&.gallery-columns-7 figure {
+	// 		flex: 1 1 12.285%;
+	// 		max-width: 12.285%;				
+	// 	}
+	// 	&.gallery-columns-8 figure {
+	// 		flex: 1 1 10.05%;
+	// 		max-width: 10.05%;			
+	// 	}
+	// 	&.gallery-columns-9 figure {
+	// 		flex: 1 1 9.11%;
+	// 		max-width: 9.11%;				
+	// 	}											
+	// }
+	// .wp-caption {
+	// 	margin: 0;
+	// 	max-width: 500px;
+	// 	background: $color-03;
+	// 	border: 5px solid $color-03;
+	// 	img {
+	// 		max-width: 100% !important;
+	// 	}
+	// 	.wp-caption-text {
+	// 		padding: 10px;
+	// 		font-style: italic;
+	// 	}
+	// }
+	// .alignright {
+	// 	float: right;
+	// 	clear: right;
+	// 	margin: 0 0 20px 20px;
+	// }
+	// .alignleft {
+	// 	float: left;
+	// 	clear: left;
+	// 	margin: 0 20px 20px 0;
+	// }
+	// .aligncenter {
+	// 	margin: 0 auto;
+	// 	display: block;
+	// }
+	// .screen-reader-text {
+	// 	clip: rect(1px, 1px, 1px, 1px);
+	// 	position :absolute !important;
+	// }
 }
 
 /* Entry - Content
