--- a/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
@@ -21,6 +21,7 @@ $color-10: #999999; // gray
 $color-11: #bbbbbb; // gray
 $color-12: rgba(255,255,255,0.06); // transparentish
 $color-13: rgba(255,255,255,0.80); // transparentish
+$color-14: #f5f5f5; // whiteish
 
 /* Fonts
 ========================================================================== */
