--- a/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
@@ -82,3 +82,5 @@ $icon-film2: '\e913';
 $icon-video-camera: '\e914';
 $icon-book2: '\e920';
 $icon-tv2: '\e95b';
+$icon-quotes-left: '\e977';
+$icon-quotes-right: '\e978';
