--- a/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
@@ -27,7 +27,7 @@
 
 .thumbnail-extend .image-wrap {
 	line-height: 0;
-	border: 5px solid $color-06;
+	border: 5px solid $color-06;	
 	overflow: hidden;
 	img {
 		width: 100%;
@@ -52,7 +52,7 @@
 		.entry-thumbnail {
 			@include sizing(100%, 200px);
 			margin: 0 0 20px 0;
-			border: 1px solid $color-03;
+			border: 1px solid $color-08;
 			.image-wrap {
 				@include sizing(100%, 100%);
 				background-repeat: no-repeat;
@@ -70,10 +70,10 @@
 		.entry-thumbnail {
 			float: left;
 			max-width: 300px;
-			padding: 0 20px 20px 0;
+			margin: 0 20px 20px 0;
 			.image-wrap {
 				line-height: 0;
-				border: 5px solid $color-06;				
+				border: 5px solid $color-08;				
 			}
 		}
 	}
@@ -182,7 +182,7 @@
 	margin: 0 20px 0 0;
 	line-height: 0;
 	overflow: hidden;
-	border: 5px solid $color-06;		
+	border: 5px solid $color-06;			
 }
 
 .entry-author .entry-author-thumbnail {
@@ -208,6 +208,38 @@
 	}
 }
 
+/* Entry - Review Details
+========================================================================== */
+
+.entry-single .entry.insprvw-review .entry-item-reviewed {
+	.entry-details {
+		.review-information {
+			position: relative;
+			left: 20px;
+			li .review-label {
+				font-weight: bold;
+			}
+		}
+		.review-synopsis {
+			@include muses-bg;	
+			margin: 0 0 20px 20px;
+			padding: 20px;
+			p:last-child {
+				margin: 0;
+			}
+		}
+	}
+	&.no-thumbnail .entry-details {
+		.review-information {
+			margin: 0 0 20px 20px;
+			left: -3px;
+		}
+		.review-synopsis {
+			margin: 0 0 20px 0;
+		}
+	}
+}
+
 /* Entry - Content
 ========================================================================== */
 
@@ -221,5 +253,32 @@
 	}
 	.read-more {
 		padding: 0 0 0 5px;
+	}
+}
+
+/* Entry - Footer
+========================================================================== */
+
+.entry-single .entry.insprvw-review .entry-footer {
+	margin: 0 0 18px 0;
+	p {
+		margin: 0 0 2px 0;
+	}
+	.tags, .categories {
+		position: relative;
+		padding: 0 0 0 25px;
+		&:before {
+			@include muses-icons;
+			color: $color-01;
+			position: absolute;
+			top: 2px;
+			left: 0;
+		}
+	}
+	.tags:before {
+		content: $icon-tag;
+	}
+	.categories:before {
+		content: $icon-folder-open;
 	}
 }
