--- a/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
@@ -264,15 +264,15 @@
 	border-top: 1px solid $color-05;
 	border-bottom: 1px solid $color-05;
 	padding: 10px 0;
-	a {
-		color: #ffffff;
-	}
 	p {
 		margin: 0 0 2px 0;
 	}
 	.tags, .categories {
 		position: relative;
 		padding: 0 0 0 25px;
+		strong {
+			padding: 0 5px 0 0;
+		}
 		&:before {
 			@include muses-icons;
 			color: $color-01;
